--- a/ch_conclusions.tex
+++ b/ch_conclusions.tex
@@ -167,18 +167,18 @@ For the purpose of continuing this research line, the following is a list of pos
     If we can split the endemic region according to the infection rate in different areas, or considering particular infections we can then attempt to build a model complex enough to detect infected users nationwide. % With the use of a high-quality epidemic dataset, we assume that a
     For this to happen, it is of primary importance to have a reliable dataset available, otherwise it would not be possible to reach a classifier with good generalization performance.
 
-    \item [Feature importance] From the best-features results shown in \cref{ch:results}, we can think of further exploring Machine Learning methods that focus solely on exploring features' predictive power to determine how attributes are associated with a user's long-term migration.
+    \item [Feature importance.] From the best-features results shown in \cref{ch:results}, we can think of further exploring Machine Learning methods that focus solely on exploring features' predictive power to determine how attributes are associated with a user's long-term migration.
     Also, from these same results, we find that it will be relevant to explore specific calling patterns on annual holidays during the last week of the year, from the 24 to the 31 of December.
 
-    \item [Test other classifiers] The probabilistic models introduced in this work are a brief list of the ones available in the literature and of these, we know that only Naive Bayes had an acceptable classification performance in \cref{target2}.
+    \item [Test other classifiers.] The probabilistic models introduced in this work are a brief list of the ones available in the literature and of these, we know that only Naive Bayes had an acceptable classification performance in \cref{target2}.
     It would be interesting to see how other well-established and known methods perform for this case and see if any of them can correct this.
     Some examples of other algorithms not shown in this work are K-Nearest Neighbors, Support Vector Machines and Classification Neural Networks.
 
-    \item [Test other pre-processing techniques] In line with the problem addressed by the previous point, there are multiple other data-based techniques to address the problem of learning with highly unbalanced classes.
+    \item [Test other pre-processing techniques.] In line with the problem addressed by the previous point, there are multiple other data-based techniques to address the problem of learning with highly unbalanced classes.
     These tend to focus on under-sampling the majority class, over-sampling the minority class, or a combination of both.
 
 
-    \item [Domain Evaluation] The evaluation of Machine Learning algorithms needs to incorporate domain specific knowledge to reassess the errors accordingly. In this sense, we can say that Type I or Type II errors may not be the same at the eyes of a health researcher.
+    \item [Domain Evaluation.] The evaluation of Machine Learning algorithms needs to incorporate domain specific knowledge to reassess the errors accordingly. In this sense, we can say that Type I or Type II errors may not be the same at the eyes of a health researcher.
     In a future iteration, it would be interesting to evaluate again the results with the opinion of other domain experts where the algorithm's performance could be seen differently.
 
 \end{description}
