--- a/ch_results.tex
+++ b/ch_results.tex
@@ -275,8 +275,8 @@ Below we can find a descriptive collection of those features for these learners,
     These plots aggregated calling patterns for all users with vulnerable calls.
 
     \item Mobility size: Finally, different measures of the distance in human mobility were determined to be important by the model.
-    Both mobility diamater attributes were highlighted, where in one considered the mobility of users during weekdays and for the other, only specific mobility during weeknights.
-     general mobility diameters and weekday or weeknight specific mobility were relevant.
+    Both mobility diameter attributes were highlighted, where in one considered the mobility of users during weekdays and for the other, only specific mobility during weeknights.
+     General mobility diameters and weekday or weeknight specific mobility were relevant.
      The importance of these features were highlighted on a number of occasions by the ensemble learners.
      We can also note that in \cref{subsection:decision_trees_experiment} the Decision Tree Learners selected this features for the higher nodes.
 
@@ -284,7 +284,7 @@ Below we can find a descriptive collection of those features for these learners,
 \end{itemize}
 
 These factors identify strong predictors in long-term human mobility and provide additional insights into our original hypothesis of which predictors were most valuable for the task.
-Understanding these factors can further provide information into the problem of chagasic disease spread in the long run.
+Understanding these factors can further provide information into the problem of Chagasic disease spread in the long run.
 
 As a final remark that we must add here, the previous best-features list carries some bias introduced by the model's feature-target correlations.
 A similar argument can be made for the best-features calculated from the Gradient Boosting experiment that used only a filtered set of features, previously selected by the Random Forest experiment's best-features result.
