Hack to fix master table column labels width

--- a/ch_results.tex
+++ b/ch_results.tex
@@ -364,7 +364,7 @@ The table shows the best-fit classifier's performance across three scores on the
 			For each task and classifier, we show the its $Accuracy$, $ROC AUC$ and $F1$ test-set scores, along with the runtimes of a full cross validation procedures on the learner.}\label{tab:master_table_results}
 		\ra{1.3}
 		%\hskip-4.0cm
-		\begin{tabular}{@{}rrrrrc@{}} \toprule
+		\begin{tabular}{@{}rr@{\hskip 0.3cm}r@{\hskip 0.3cm}r@{\hskip 0.3cm}rc@{}} \toprule
 			&  \multicolumn{4}{c}{Problem 1} \\
 			\cmidrule{2-5}
 			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ \\ \midrule
@@ -382,7 +382,7 @@ The table shows the best-fit classifier's performance across three scores on the
 		%\hskip-4.0cm
 		\ra{1.3}
 		%\hskip-4.0cm
-		\begin{tabular}{@{}rrrrrc@{}} \toprule
+		\begin{tabular}{@{}rr@{\hskip 0.3cm}r@{\hskip 0.3cm}r@{\hskip 0.3cm}rc@{}} \toprule
 			&  \multicolumn{4}{c}{Problem 2} \\
 			\cmidrule{2-5}
 			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ \\ \midrule
@@ -399,7 +399,7 @@ The table shows the best-fit classifier's performance across three scores on the
 		%\hskip-4.0cm
 		\ra{1.3}
 		%\hskip-4.0cm
-		\begin{tabular}{@{}rrrrrc@{}} \toprule
+		\begin{tabular}{@{}rr@{\hskip 0.3cm}r@{\hskip 0.3cm}r@{\hskip 0.3cm}rc@{}} \toprule
 			&  \multicolumn{4}{c}{Problem 3} \\
 			\cmidrule{2-5}
 			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ \\ \midrule
@@ -411,9 +411,10 @@ The table shows the best-fit classifier's performance across three scores on the
 			\bottomrule
 		\end{tabular}
 		%\hskip-4.0cm
+		\medskip
 		\ra{1.3}
 		%\hskip-4.0cm
-		\begin{tabular}{@{}rrrrrc@{}} \toprule
+		\begin{tabular}{@{}rr@{\hskip 0.3cm}r@{\hskip 0.3cm}r@{\hskip 0.3cm}rc@{}} \toprule
 			&  \multicolumn{4}{c}{Problem 4} \\
 			\cmidrule{2-5}
 			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ \\ \midrule
